--- a/app/css/login.css
+++ b/app/css/login.css
@@ -42,3 +42,16 @@ ion-card {
     height: 48px;
     font-size: 16px;
 }
+
+.form_admin{
+    box-shadow: 1px 5px 5px rgb(0.2,0,0,0.2);
+    border-radius: 7px;
+}
+.buttonAdmin{
+    height: 40px;
+    margin-top: 7%;
+    margin-left: 50%;
+}
+.portada_admin{
+    margin-left: 5%;
+}
