--- a/app/css/style.css
+++ b/app/css/style.css
@@ -53,3 +53,16 @@ ion-icon {
     flex-direction: column;
     padding-left: 12px;
 }
+
+.form_admin{
+    box-shadow: 1px 5px 5px rgb(0.2,0,0,0.2);
+    border-radius: 7px;
+}
+.buttonAdmin{
+    height: 40px;
+    margin-top: 7%;
+    margin-left: 50%;
+}
+.portada_admin{
+    margin-left: 5%;
+}
