#MET-65 boton agendar turno en lista medicos a cargo

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -106,3 +106,13 @@ ion-icon {
 .buttons_medicos *{
     font-size: 11px;
 }
+
+.avatar-medico {
+    width: 39px;
+    height: 39px;
+}
+
+.bottom-card-turno {
+    display: flex;
+    flex-direction: row-reverse;
+}
