--- a/app/css/style.css
+++ b/app/css/style.css
@@ -115,4 +115,10 @@ ion-icon {
 .bottom-card-turno {
     display: flex;
     flex-direction: row-reverse;
+    border-top: 1px solid #00000024;
+}
+
+.check-icon {
+    width: 56px;
+    height: 56px;
 }
